iOS: Added WaveFormScaleView to WaveFormScrollView. Only displays a blue background for now, but this will make the wave form scale up correctly when zooming the waveform (instead of drawing the scale directly on the bitmap)
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -252,6 +252,7 @@
       <DependentUpon>PlaylistViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Helpers\UIKitHelper.cs" />
+    <Compile Include="Classes\Controls\MPfmWaveFormScaleView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
