--- a/MPfm/MPfm.Windows/MPfm.Windows.csproj
+++ b/MPfm/MPfm.Windows/MPfm.Windows.csproj
@@ -76,7 +76,6 @@
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.EnterpriseServices" />
-    <Reference Include="System.Reactive, Version=1.0.10621.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Services" />
@@ -90,8 +89,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\DriverComboBoxItem.cs" />
-    <Compile Include="Classes\SongQuery.cs" />
+    <Compile Include="Classes\Forms\BaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Specifications\WindowsSyncDeviceSpecifications.cs" />
+    <Compile Include="Classes\Misc\DriverComboBoxItem.cs" />
+    <Compile Include="Classes\Navigation\WindowsNavigationManager.cs" />
+    <Compile Include="Classes\Misc\SongQuery.cs" />
     <Compile Include="Configuration\Audio\AudioConfigurationSection.cs" />
     <Compile Include="Configuration\Audio\AudioMixerConfigurationSection.cs" />
     <Compile Include="Configuration\Audio\AudioEQConfigurationSection.cs" />
