--- a/MPfm/MPfm.Android/Properties/AndroidManifest.xml
+++ b/MPfm/MPfm.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,5 @@
 	<uses-sdk android:targetSdkVersion="17" />
 	<application android:label="Sessions" android:theme="@style/MyAppTheme" android:icon="@drawable/icon"></application>
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
