Android: Changed parameters for view creation of SyncMenu and SyncDownload in MobileNavigationManager. This allows the view to know more about the device (i.e. display device name in action bar on Android). Added layout for MobileLibraryBrowserCell. Added album panel to MobileLibraryBrowser layout. Now loading album art in mini player. Multiple layout bug fixes.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -203,6 +203,9 @@
     <AndroidResource Include="Resources\Layout\About.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\Layout\MobileLibraryBrowserCell.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
