Android: Added connection change receiver. SyncDeviceSpecifications: Added event and method for connection change notifications. SyncListenerServer: Now stopping the HTTP service when wifi is unavailable; starting the service again when wifi returns.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Classes\Navigation\AndroidNavigationManager.cs" />
     <Compile Include="Classes\Objects\ApplicationState.cs" />
     <Compile Include="Classes\Objects\GenericListItem.cs" />
+    <Compile Include="Classes\Receivers\ConnectionChangeReceiver.cs" />
     <Compile Include="Classes\Services\WidgetService.cs" />
     <Compile Include="Classes\Widgets\PlayerWidget.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
