--- a/MPfm/MPfm.Android/Properties/AndroidManifest.xml
+++ b/MPfm/MPfm.Android/Properties/AndroidManifest.xml
@@ -4,4 +4,6 @@
 	<application android:label="Sessions" android:theme="@style/MyAppTheme" android:icon="@drawable/icon"></application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest>
