--- a/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
@@ -199,11 +199,15 @@
     <EmbeddedResource Include="WebApp\images\app_logo.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Lib\iOS\Newtonsoft.Json.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Database\MonoSQLiteGateway.cs" />
     <Compile Include="Database\Interfaces\IDatabaseFacade.cs" />
     <Compile Include="Database\Interfaces\ISQLiteGateway.cs" />
     <Compile Include="Database\DatabaseFacade.cs" />
     <Compile Include="ILibrary.cs" />
+    <Compile Include="Objects\NetworkState.cs" />
     <Compile Include="Objects\PlaylistFile.cs" />
     <Compile Include="Objects\History.cs" />
     <Compile Include="Objects\Setting.cs" />
@@ -237,8 +241,5 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Lib\iOS\Newtonsoft.Json.dll" />
   </ItemGroup>
 </Project>
