Android: Renamed all icons for actionbar with the actionbar_ prefix instead of icon_.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -254,38 +254,38 @@
     <AndroidResource Include="Resources\drawable-mdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\Icon.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_cloud.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_cloud.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_cloud.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_cloud.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_cloud.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_cloud.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_cloud.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_cloud.png" />
     <AndroidResource Include="Resources\drawable-hdpi\icon_transparent.png" />
     <AndroidResource Include="Resources\drawable-mdpi\icon_transparent.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon_transparent.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon_transparent.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_earth.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_equalizer.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_info.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_mobile.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_settings.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_share.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_earth.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_equalizer.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_info.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_mobile.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_settings.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_share.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_earth.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_equalizer.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_info.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_mobile.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_settings.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_share.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_earth.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_equalizer.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_info.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_mobile.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_settings.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_share.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_earth.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_equalizer.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_info.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_mobile.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_settings.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_share.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_earth.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_equalizer.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_info.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_mobile.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_settings.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_share.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_earth.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_equalizer.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_info.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_mobile.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_settings.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_share.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_earth.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_equalizer.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_info.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_mobile.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_settings.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_share.png" />
     <AndroidResource Include="Resources\animator\fade_out.xml" />
     <AndroidResource Include="Resources\animator\slide_in.xml" />
     <AndroidResource Include="Resources\animator\slide_out.xml" />
@@ -339,14 +339,14 @@
     <AndroidResource Include="Resources\drawable-hdpi\icon_phone.png" />
     <AndroidResource Include="Resources\drawable-hdpi\icon_tablet.png" />
     <AndroidResource Include="Resources\drawable-hdpi\icon_windows.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_add.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\icon_download.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_add.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\icon_download.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_add.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\icon_download.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_add.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\icon_download.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_add.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_download.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_add.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_download.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_add.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_download.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_add.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_download.png" />
     <AndroidResource Include="Resources\drawable-hdpi\player_previous.png" />
     <AndroidResource Include="Resources\drawable-hdpi\player_previous_on.png" />
     <AndroidResource Include="Resources\drawable-mdpi\player_previous.png" />
