--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -432,6 +432,10 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\icon_speaker.png" />
     <AndroidResource Include="Resources\Anim\listviewoptions_fade_in.xml" />
     <AndroidResource Include="Resources\Anim\listviewoptions_fade_out.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\actionbar_sync.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\actionbar_sync.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\actionbar_sync.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_sync.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
